--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-				"prettier"
+				"prettier",
+				"plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -32,6 +33,9 @@
 		"settings": {
 			"import/resolver": {
 				"typescript": {}
-			}
-		}
+			},
+			"react": {
+				version: 'detect'
+			},
+		},
 }
