--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,41 +1,42 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-				"jest": true
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended",
-				"prettier",
-				"plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "camelcase": "error",
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-trailing-spaces": "error",
+    "no-unused-vars": "error",
+    "no-duplicate-imports": "error",
+    "no-empty-function": "error",
+		"react/no-unescaped-entities": 0
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
     },
-    "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
-    "rules": {
-			"react/react-in-jsx-scope": "off",
-			"camelcase": "error",
-			"quotes": ["error", "single"],
-			"semi": ["error", "always"],
-			"no-trailing-spaces": "error",
-			"no-unused-vars": "error",
-			"no-duplicate-imports": "error",
-			"no-empty-function": "error"
-    },
-		"settings": {
-			"import/resolver": {
-				"typescript": {}
-			},
-			"react": {
-				version: 'detect'
-			},
-		},
+    "react": {
+      "version": "detect"
+    }
+  }
 }
