--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +13,13 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "framer-motion": "^6.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.2.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -21,9 +28,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-		"lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
-		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json}' --config ./.prettierrc"
+    "lint": "eslint '**/*.{js,jsx,ts,tsx,json}'",
+    "lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx,json}'",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\" --config ./.prettierrc"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.18.0",
