[FEATURE]: call api from strapi

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,10 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "camelcase": "error",
-    "quotes": ["error", "single"],
+    "quotes": ["warning", "single"],
     "semi": ["error", "always"],
     "no-trailing-spaces": "error",
-    "no-unused-vars": "error",
+    "no-unused-vars": "warn",
     "no-duplicate-imports": "error",
     "no-empty-function": "error",
 		"react/no-unescaped-entities": 0
