--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "dotenv": "^16.0.1",
     "framer-motion": "^6.3.11",
+    "openapi-typescript-fetch": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
