--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "jsx": "preserve",
     "incremental": true,
     "sourceMap": true,
+    "typeRoots": ["./node_modules/@types", "./*"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.module.css"],
 }
