--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-react-typescript",
+  "name": "gratflix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,26 +9,23 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
     "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.11",
+    "fs": "^0.0.1-security",
     "openapi-typescript-fetch": "^1.1.3",
+    "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "swiper": "^8.2.4",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "swiper": "^8.1.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -55,9 +52,14 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^28.1.5",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -66,6 +68,9 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
