--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "react-scripts": "5.0.1",
     "swiper": "^8.1.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0"
+    "webpack": "^5.73.0",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint '**/*.{js,jsx,ts,tsx,json}'",
@@ -59,7 +60,6 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
