--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "cross-env": "^7.0.3"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
-    "build": "cross-env react-scripts build",
+    "start": "NODE_OPTIONS='--inspect' react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint '**/*.{js,jsx,ts,tsx,json}'",
