--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cross-env": "^7.0.3"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
+    "dev": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint '**/*.{js,jsx,ts,tsx,json}'",
