--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cross-env": "^7.0.3",
     "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.11",
     "fs": "^0.0.1-security",
+    "nth-check": "^2.1.1",
     "openapi-typescript-fetch": "^1.1.3",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
@@ -21,8 +23,7 @@
     "react-router-dom": "^6.3.0",
     "swiper": "^8.1.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0",
-    "cross-env": "^7.0.3"
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
@@ -53,7 +54,6 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.5",
-    "react-scripts": "5.0.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
@@ -70,6 +70,7 @@
     "prettier": "^2.7.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
