--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openapi-typescript-fetch": "^1.1.3",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
+    "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
