--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -10,45 +10,44 @@ on:
   workflow_call:
 
 jobs:
-    test:
-      name: Test
-      runs-on: ubuntu-latest
-      env:
-        NODE_ENV: test
+  test:
+    name: Test application
+    runs-on: ubuntu-latest
+    steps:
+      - name: "☁️ checkout repository"
+        uses: actions/checkout@v2
 
-      steps:
-        - name: Checkout
-            uses: actions/checkout@master
+      - name: "🔧 setup node"
+        uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 16
 
-          - name: Get yarn cache
-            id: yarn-cache
-            run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: "🔧 install npm@latest"
+        run: npm i -g npm@latest
 
-          - uses: actions/cache@v1
-            with:
-              path: ${{ steps.yarn-cache.outputs.dir }}
-              key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-              restore-keys: |
-                ${{ runner.os }}-yarn-
+      - name: "📦 install dependencies"
+        uses: bahmutov/npm-install@v1
 
-          - name: Set up Node
-            uses: actions/setup-node@v1.1.0
-            with:
-              node-version: '10.x'
+      - name: "🔍 run tests"
+        run: npm run test --if-present
 
-          - name: Install dependencies
-            run: yarn install --frozen-lockfile
+  lint:
+    name: Code standards
+    runs-on: ubuntu-latest
+    steps:
+      - name: "☁️ checkout repository"
+        uses: actions/checkout@v2
 
-          - name: Lint
-            run: yarn lint
+      - name: "🔧 setup node"
+        uses: actions/setup-node@v2.1.5
+        with:
+          node-version: 16
 
-          - name: Migrate
-            run: knex migrate:latest
+      - name: "🔧 install npm@latest"
+        run: npm i -g npm@latest
 
-          - name: Test server
-            run: yarn test:server
+      - name: "📦 install dependencies"
+        uses: bahmutov/npm-install@v1
 
-    deploy:
-      name: Deploy
-      runs-on: ubuntu-latest
-      needs: test
+      - name: "🔍 lint code"
+        run: npm run lint --if-present
