--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gratflix",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.0",
@@ -21,11 +21,11 @@
     "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
     "swiper": "^8.1.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.73.0",
-    "react-scripts": "5.0.1"
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
