--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": ">=5.0.1 <6.0.0",
     "swiper": "^8.1.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
@@ -72,7 +72,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
     "react-app-rewired": "^2.2.1",
-    "react-dom": "^18.2.0",
+    "react-dom": ">=18.0.0 <19.0.0",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
