--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": ">=5.0.1 <6.0.0",
