--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -22,11 +22,11 @@ jobs:
         with:
           node-version: 16
 
-      - name: "🔧 install yarn"
-        run: npm i -g yarn
+      - name: "🔧 install npm@latest"
+        run: npm i -g npm@latest
 
       - name: "📦 install dependencies"
-        uses: yarn install frozen-lockfile
+        uses: bahmutov/npm-install@v1
 
   lint:
     name: Code standards
@@ -40,11 +40,11 @@ jobs:
         with:
           node-version: 16
 
-      - name: "🔧 install yarn"
+      - name: "🔧 install npm@latest"
         run: npm i -g npm@latest
 
       - name: "📦 install dependencies"
-        uses: yarn install frozen-lockfile
+        uses: bahmutov/npm-install@v1
 
       - name: "🔍 lint code"
         run: npm run lint --if-present
