--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "gratflix",
   "version": "0.3.0",
   "private": true,
+  "engines" : { 
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
+  },
   "dependencies": {
     "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11.9.3",
