--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": ">=18.0.0 <19.0.0",
     "typescript": "^4.7.4",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript-plugin-css-modules": "^3.4.0",
+    "webpack-cli": "^4.10.0"
   }
 }
