--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "gratflix",
   "version": "0.3.0",
   "private": true,
+  "engines" : { 
+    "npm": "8.5.0",
+    "node": "16.14.2",
+    "yarn": "1.22.19"
+  },
   "dependencies": {
     "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11.9.3",
@@ -75,7 +80,6 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": ">=18.0.0 <19.0.0",
     "typescript": "^4.7.4",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "webpack-cli": "^4.10.0"
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
