--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines" : { 
     "npm": "8.5.0",
-    "node": "16.14.2",
+    "node": "16.16.0",
     "yarn": "1.22.19"
   },
   "dependencies": {
@@ -79,7 +79,7 @@
     "prettier": "^2.7.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": ">=18.0.0 <19.0.0",
-    "typescript": "^4.7.4",
+    "typescript": ">=3.3.1 < 4.8.0",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
