--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "npm": "8.5.0",
-    "node": "16.14.2",
+    "node": ">=16.14.2",
     "yarn": "1.22.19"
   },
   "dependencies": {
