--- a/package.json
+++ b/package.json
@@ -9,14 +9,54 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mantine/carousel": "^6.0.11",
+    "@mantine/core": "^6.0.11",
+    "@mantine/dates": "^6.0.11",
+    "@mantine/dropzone": "^6.0.11",
+    "@mantine/form": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
+    "@mantine/modals": "^6.0.11",
+    "@mantine/next": "^6.0.11",
+    "@mantine/notifications": "^6.0.11",
+    "@mantine/nprogress": "^6.0.11",
+    "@mantine/prism": "^6.0.11",
+    "@mantine/spotlight": "^6.0.11",
+    "@mantine/tiptap": "^6.0.11",
+    "@next/font": "^13.4.4",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tabler/icons-react": "^2.20.0",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@types/axios": "^0.14.0",
+    "@types/moment": "^2.13.0",
+    "@types/node": "20.2.4",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "@types/react-redux": "^7.1.25",
+    "@types/recharts": "^1.8.24",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "embla-carousel-react": "^8.0.0-rc05",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "fast-xml-parser": "^4.2.7",
+    "framer-motion": "^10.15.0",
+    "moment": "^2.29.4",
+    "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "recharts": "^2.7.2",
+    "redux": "^4.2.1",
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
+    "uuidv4": "^6.2.13"
   }
 }
