--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.0.0",
+    "@ctrl/plex": "^3.3.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@lukehagar/plexjs": "^0.18.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.2",
     "cross-env": "^7.0.3",
     "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^16.0.1",
@@ -32,10 +36,12 @@
     "react-scripts": ">=5.0.1 <6.0.0",
     "swiper": "^8.1.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0"
+    "webpack": "^5.73.0",
+    "xml-js": "^1.6.11",
+    "zod": "^3.23.8"
   },
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' react-scripts start",
+    "dev": "cross-env react-scripts start",
     "build": "cross-env PROCESS_ENV=production react-scripts build",
     "test": "react-scripts test",
     "start": "react-scripts start",
@@ -63,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/jest": "^28.1.5",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
